# qiluo_admin

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  qiluo.sql
config/: development.yaml
docs/: 01-quickstart-backend.md  02-config-guide.md  03-auth-and-permissions.md  04-develop-an-api.md  05-database-and-migrations.md
src/: app.rs  banner.rs  db.rs  lib.rs  main.rs
src/api/: mod.rs  test.rs
src/api/sys_controll/: mod.rs
src/cache/: memory.rs
src/common/: error.rs  util.rs  validatedform.rs  validatedjson.rs  validatedquery.rs
src/config/: appconfig.rs
src/db/: registry.rs
src/midle_ware/: auth.rs  jwt.rs  operate_log.rs
src/model/: mod.rs  prelude.rs
src/model/sys/args/: asys_user.rs
src/model/sys/entity/: mod.rs  prelude.rs  sys_api_permission.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_info.rs  sys_menu.rs  sys_notice.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_role_dept.rs  sys_role_menu.rs  sys_user.rs  sys_user_dept.rs  sys_user_post.rs  sys_user_role.rs  sys_white_jwt.rs
src/model/sys/model/: msys_dept.rs  msys_user.rs
src/model/test/args/: mod.rs
src/model/test/entity/: mod.rs  prelude.rs  test_api.rs
src/model/test/model/: mod.rs  mtest_api.rs
src/service/: mod.rs  prelude.rs  test.rs
src/service/sys/: s_sys_dept.rs  s_sys_menu.rs  s_sys_server_info.rs  s_sys_user.rs  s_sys_white_jwt.rs
src/service/test/: s_test_api.rs
src/worker/common/: enqueue_opts.rs  periodic.rs  processor.rs  unit_of_work.rs
src/worker/mailer/: email_sender.rs
